feat: core runtime stability - honest gates, durable runtime, port reduction
- Slice 0-1: honest gates, frontend contract, startup/readiness/auth isolation
- Slice 2: knowledge ingestion/retrieval fail-closed + real infra evidence
- Slice 3: conversation/SSE terminal-idempotent hardening, replay dedup
- Slice 4: governed tool execution - UNKNOWN durable state, gateway split
  (1272->490 lines), path-escape guard wiring
- Slice 5: outbox atomic claim + timeout reclaim + cross-instance dedup,
  error retryable contract
- Port reduction: 370 -> 362 (context-pack, billing, feedback, rollout,
  artifact, run-query merges); Controller-to-Kernel dependencies -> zero
- ADR-001..004 backfilled; complexity baseline ratcheted down

Co-Authored-By: Claude <noreply@anthropic.com>